# ve_data_science_tool

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
.github/workflows/: ci.yaml
tests/: conftest.py  test_data.py  test_entry_points.py  test_maintenance_tool.py  test_scripts.py
tests/script_files/: __init__.py  script.R  script.Rmd  script.md  script.py
ve_data_science_tool/: __init__.py  config.py  data.py  entry_points.py  globus.py  scripts.py
